--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,26 @@
 ---
 layout: default
 ---
+<style>
+  .post-author {
+    padding-left: 1em
+  }
+  .post-meta {
+    padding-left: 0.6em
+  }
+</style>
+
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    <p class="post-meta">
+      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time>
+      
+      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+        <span class="post-author" itemprop="name">by: {{ site.author }}</span>
+      </span>
+      </p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
