--- a/css/main.scss
+++ b/css/main.scss
@@ -3,39 +3,32 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$base-font-family: Verdana, Arial, sans-serif;
+$base-font-size: 16px;
+$base-font-weight: 500;
 $base-line-height: 1.5;
+$small-font-size: $base-font-size * 0.875;
 
-$spacing-unit:     30px;
+$spacing-unit: 32px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+$text-color: #111;
+$brand-color: #222;
 
 // Width of the content area
-$content-width:    800px;
+$content-width: 1200px;
 
-$on-palm:          600px;
-$on-laptop:        800px;
+$on-palm: 600px;
+$on-laptop: 800px;
 
 
 
 // Use media queries like this:
 // @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
+    // .wrapper {
+        // padding-right: $spacing-unit / 2;
+        // padding-left: $spacing-unit / 2;
+    // }
 // }
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
