--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,16 +2,33 @@
  * Site header
  */
 .site-header {
-    border-bottom: 1px solid black;
-    min-height: 72px;
-    background: rgba(0,0,0,0.4);
+    border-bottom: 1px solid rgba(0,0,0,0.5);
+    height: 120px;
+    // background: rgba(0,0,0,0.4);
+    
+    position: relative;
+    
+    overflow: hidden;
+}
+
+#left-polygon {
+    position: absolute;
+    left: calc(50% - 2150px);
+    left: -webkit-calc(50% - 2150px);
+    top: 10px;
+}
+
+#right-polygon {
+    position: absolute;
+    left: calc(50% + 150px);
+    left: -webkit-calc(50% + 150px);
+    top: 10px;
 }
 
 .site-title {
     font-size: 32px;
     line-height: 72px;
     letter-spacing: -1px;
-    float: left;
 }
 
 .site-nav {
