--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,6 +23,9 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
+    
+    // background: linear-gradient(45deg, rgba(0,0,255,1), rgba(0,255,0,1));
+    background: rgba(0,0,0,0);
 }
 
 
