--- a/css/main.scss
+++ b/css/main.scss
@@ -41,6 +41,7 @@ $on-laptop: 800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
+        "effect",
         "layout",
         "syntax-highlighting"
 ;
