--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
   <body>
 
     {% include header.html %}
-
+      
+    <div class="page-padding">
+    </div>
     <div class="page-content">
-      <div class="wrapper">
         {{ content }}
-      </div>
     </div>
 
     {% include footer.html %}
