--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,13 @@ $on-palm: 600px;
 $on-laptop: 800px;
 
 
+$post-list-item-height: 22em;
+$post-list-item-content-width: 75%;
+$post-list-item-content-height: 16em;
+$post-list-item-content-border: 0.5em;
+$post-list-item-padding-vertical: ($post-list-item-height - $post-list-item-content-height - $post-list-item-content-border * 2) / 2;
+
+
 
 // Use media queries like this:
 // @include media-query($on-palm) {
