--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<div class="site-banner">
 
   <!-- <div class="wrapper"> -->
 
@@ -23,18 +23,7 @@
     <!-- </nav> -->
 
   <!-- </div> -->
-    <div class="header-wrapper">
     
-        {% include defs.html %}
-        
-        <svg id="left-polygon" height="96" width="2000">
-            <polygon points="2000,0 1970,80 0,80, 0,0" fill="white" fill-opacity="1" filter="url(#inset-shadow-hard)" stroke="black" stroke-opacity="0" stroke-width="thin"/>
-        </svg>
-        
-        <svg id="right-polygon" height="96" width="2000">
-            <polygon points="2000,0 2000,80 30,80, 0,0" fill="white" fill-opacity="1" filter="url(#inset-shadow-hard)" stroke="black" stroke-opacity="0" stroke-width="thin"/>
-        </svg>
-        
-    </div>
+  {% include defs.html %}
 
-</header>
+</div>
