--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,27 +1,55 @@
 /**
  * Site header
  */
-.site-header {
-    height: 10em;
-    border-bottom: thin solid rgba(0,0,0,0.2);
-    
-    position: relative;
+.site-banner {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 400% 400%;
+    -webkit-animation: 12s ease infinite gradient-animation;
+    -moz-animation: 12s ease infinite gradient-animation;
+    animation: 12s ease infinite gradient-animation;
     
     overflow: hidden;
 }
 
-#left-polygon {
-    position: absolute;
-    left: calc(50% - 2150px);
-    left: -webkit-calc(50% - 2150px);
-    top: 10px;
+@-webkit-keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
 }
 
-#right-polygon {
-    position: absolute;
-    left: calc(50% + 150px);
-    left: -webkit-calc(50% + 150px);
-    top: 10px;
+@-moz-keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
 }
 
 .site-title {
@@ -175,13 +203,15 @@
  * Page content
  */
 .page-padding {
+    margin: 0;
+    margin-top: 20em;
     height: 1em;
 //    background: linear-gradient(to right, rgba(0,0,0,0) 0%, white 5%, white 95%, rgba(0,0,0,0) 100%);
     background: white;
 }
 
 .page-content {
-    
+    margin: 0;
 }
 
 .post-list {
@@ -196,9 +226,6 @@
         position: relative;
 //        background: linear-gradient(to right, rgba(0,0,0,0) 0%, white 5%, white 95%, rgba(0,0,0,0) 100%);
 //        background: white;
-        
-//        clip-path: url(#cp);
-//        mask: url(#cp);
         
         .post-list-wrapper {
             margin: 0 12.5%; // center?
