--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<div class="site-footer">
 
   <div class="wrapper">
 
@@ -34,4 +34,4 @@
 
   </div>
 
-</footer>
+</div>
