--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
 
     {% include footer.html %}
     
-    <script src="/js/bkgd.js"></script>
+    {% include blobs.html %}
+    
+<!--    <script src="/js/.js"></script>-->
 
   </body>
 
