--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="page-content-padding"></div>
+<div class="page-content-margin"></div>
 
 <ul class="post-list">
   {% for post in site.posts %}
@@ -15,10 +15,6 @@ layout: default
         <span class="post-meta">{{ post.date | date: "%B %dth - %Y" }}</span>
 -->
       </div>
-      <div class="post-list-item-wrapper-top"></div>
-      <div class="post-list-item-wrapper-bottom"></div>
-      <div class="post-list-item-wrapper-left"></div>
-      <div class="post-list-item-wrapper-right"></div>
     </li>
   {% endfor %}
 </ul>
