--- a/_includes/defs.html
+++ b/_includes/defs.html
@@ -1,7 +1,13 @@
 
-<svg>
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  
   <defs>
-    <filter id="inset-shadow-hard" x="-50%" y="-50%" width="200%" height="200%">
+    
+<!--
+    **
+    * inset shadow hard
+    *
+-->    <filter id="inset-shadow-hard" x="-50%" y="-50%" width="200%" height="200%">
       <feComponentTransfer in="SourceAlpha">
         <feFuncA type="table" tableValues="1 0"/>
       </feComponentTransfer>
@@ -21,6 +27,11 @@
       </feMerge> -->
     </filter>
     
+<!--
+    **
+    * inset shadow soft
+    *
+-->
     <filter id="inset-shadow-soft" x="-50%" y="-50%" width="200%" height="200%">
       <feOffset dx="0" dy="0"/>
       <feGaussianBlur stdDeviation="6" result="offset-blur"/>
@@ -34,5 +45,33 @@
       />
     </filter>
     
+<!--
+    **
+    * goo
+    *
+-->
+    <filter id="goo">
+      <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur"/>
+      <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo"/>
+      <feBlend in="SourceGraphic" in2="goo"/>
+<!--      <feComposite in="SourceGraphic" in2="goo" operator="atop"/>-->
+    </filter>
+    
+<!--
+    **
+    * shadowed goo
+    *
+-->
+    <filter id="shadowed-goo">
+      <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur"/>
+      <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo"/>
+      <feGaussianBlur in="goo" stdDeviation="3" result="shadow"/>
+      <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow"/>
+      <feOffset in="shadow" dx="1" dy="1" result="shadow"/>
+      <feComposite in2="shadow" in="goo" result="goo"/>
+      <feComposite in2="goo" in="SourceGraphic" result="mix"/>
+    </filter>
+    
   </defs>
+  
 </svg>
