--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!-- centered list items pad from center, leave it -->
 <div class="page-content-margin"></div>
 
 <ul class="post-list">
