--- a/css/main.scss
+++ b/css/main.scss
@@ -50,5 +50,6 @@ $hamburger-spacing: $blob-diameter * 0.15;
     "layout",
     "home-list",
     "blobs",
+    "buttons",
     "syntax-highlighting"
 ;
