--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,4 +20,6 @@ layout: default
   {% endfor %}
 </ul>
 
+{% include buttons.html %}
+
 <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
