--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,6 +13,7 @@
     -moz-animation: 12s ease infinite gradient-animation;
     animation: 12s ease infinite gradient-animation;
     overflow: hidden;
+    z-index: 0;
 }
 
 @-webkit-keyframes gradient-animation {
@@ -61,6 +62,7 @@
     height: 30rem;
     position: relative;
     background: rgba(0,0,0,0.4);
+    z-index: 1;
 }
 
 
