--- a/_sass/_home-list.scss
+++ b/_sass/_home-list.scss
@@ -6,6 +6,7 @@
     height: 1rem;
     position: relative;
     background: white;
+    box-shadow: 0 -1ex 1em rgba(black, 0.3);
     z-index: 1;
 }
 
