--- a/_includes/blobs.html
+++ b/_includes/blobs.html
@@ -1,8 +1,8 @@
 
 <nav class="menu">
   
-  <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open"/>
-  <label class="menu-open-button" for="menu-open">
+  <input type="checkbox" href="#" class="menu-trigger" name="menu-trigger" id="menu-trigger"/>
+  <label class="menu-trigger-button" for="menu-trigger">
     <span class="hamburger hamburger-1"></span>
     <span class="hamburger hamburger-2"></span>
     <span class="hamburger hamburger-3"></span>
