--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,10 @@
-<header class="site-banner">
+<header class="site-header">
 
   {% include defs.html %}
+  
+  <div class="site-header-decoration-lttp"></div>
+  <div class="site-header-decoration-ltbm"></div>
+  <div class="site-header-decoration-rttp"></div>
+  <div class="site-header-decoration-rtbm"></div>
 
 </header>
