--- a/_includes/buttons.html
+++ b/_includes/buttons.html
@@ -1,14 +1,12 @@
 
-<div class="page-bottom-nav">
-  <nav class="btn-bar nav-light">
-    <a href="" class="btn-glass btn-prev">
-      <i class="fa fa-fw fa-lg fa-chevron-left"></i>Previous
-    </a>
-    <a href="" class="btn-glass btn-none">
-      
-    </a>
-    <a href="" class="btn-glass btn-next">
-      Next<i class="fa fa-fw fa-lg fa-chevron-right"></i>
-    </a>
-  </nav>
-</div>
+<nav class="btn-bar nav-light">
+  <a href="" class="btn-glass btn-prev">
+    <i class="fa fa-lg fa-fw fa-chevron-left"></i>Previous
+  </a>
+  <a href="" class="btn-glass btn-none">
+
+  </a>
+  <a href="" class="btn-glass btn-next">
+    Next<i class="fa fa-lg fa-fw fa-chevron-right"></i>
+  </a>
+</nav>
