--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
-<header class="site-header">
+<header class="site-banner">
 
   {% include defs.html %}
-  
-  <div class="site-header-decoration-lttp"></div>
-  <div class="site-header-decoration-ltbm"></div>
-  <div class="site-header-decoration-rttp"></div>
-  <div class="site-header-decoration-rtbm"></div>
 
 </header>
+
+<canvas id="canvas"></canvas>
