--- a/_sass/_home-list.scss
+++ b/_sass/_home-list.scss
@@ -2,7 +2,7 @@
  * Home
  */
 .page-content-margin {
-    margin-top: $site-header-height;
+    margin-top: $site-banner-height;
     height: 1em;
     position: relative;
     background: white;
