--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,104 +1,77 @@
 /**
  * Site header
  */
-.site-header {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-    background-size: 400% 400%;
-    -webkit-animation: 12s ease infinite gradient-animation;
-    -moz-animation: 12s ease infinite gradient-animation;
-    animation: 12s ease infinite gradient-animation;
-    overflow: hidden;
-    z-index: 0;
+.site-banner {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  overflow: hidden;
+  z-index: 0;
+  
+  -webkit-animation: 12s ease infinite gradient-animation;
+  -moz-animation: 12s ease infinite gradient-animation;
+  animation: 12s ease infinite gradient-animation;
+}
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  
+  animation: 6s ease infinite canvas-animation;
+}
+
+@keyframes canvas-animation {
+  0% {
+    opacity: 0
+  }
+  50% {
+    opacity: 1
+  }
+  100% {
+    opacity: 0
+  }
 }
 
 @-webkit-keyframes gradient-animation {
-    0% {
-        background-position: 0% 50%
-    }
-    50% {
-        background-position: 100% 50%
-    }
-    100% {
-        background-position: 0% 50%
-    }
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
 }
 
 @-moz-keyframes gradient-animation {
-    0% {
-        background-position: 0% 50%
-    }
-    50% {
-        background-position: 100% 50%
-    }
-    100% {
-        background-position: 0% 50%
-    }
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
 }
 
 @keyframes gradient-animation {
-    0% {
-        background-position: 0% 50%
-    }
-    50% {
-        background-position: 100% 50%
-    }
-    100% {
-        background-position: 0% 50%
-    }
-}
-
-$strip-gap: 6rem;
-.site-header-decoration-ltbm {
-  width: 50%;
-  height: $site-header-height/2;
-  position: absolute;
-  top: $site-header-height/2;
-  left: -$site-header-decoration-offset;
-  background-image: repeating-linear-gradient(-90deg,
-      rgba(255,255,255,0.4),
-      transparent $strip-gap);
-  transform:skew(45deg,0);
-}
-
-.site-header-decoration-lttp {
-  width: 50%;
-  height: $site-header-height/2;
-  position: absolute;
-  top: 0;
-  left: -$site-header-decoration-offset;
-  background-image: repeating-linear-gradient(-90deg,
-      rgba(255,255,255,0.4),
-      transparent $strip-gap);
-  transform:skew(-45deg,0);
-}
-
-.site-header-decoration-rttp {
-  width: 50%;
-  height: $site-header-height/2;
-  position: absolute;
-  top: 0;
-  left: 50%+$site-header-decoration-offset;
-  background-image: repeating-linear-gradient(90deg,
-      rgba(255,255,255,0.4),
-      transparent $strip-gap);
-  transform:skew(45deg,0);
-}
-
-.site-header-decoration-rtbm {
-  width: 50%;
-  height: $site-header-height/2;
-  position: absolute;
-  top: $site-header-height/2;
-  left: 50%+$site-header-decoration-offset;
-  background-image: repeating-linear-gradient(90deg,
-      rgba(255,255,255,0.4),
-      transparent $strip-gap);
-  transform:skew(-45deg,0);
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
 }
 
 
