--- a/css/main.scss
+++ b/css/main.scss
@@ -13,8 +13,7 @@ $base-line-height: 1.5;
 $text-color: #000;
 $brand-color: #222;
 
-$site-header-height: 20rem;
-$site-header-decoration-offset: 20%;
+$site-banner-height: 28rem;
 
 $post-list-item-height: 22rem;
 $post-list-item-content-width: 75%;
