--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,5 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   
   <script src="/js/live.js"></script>
+  <script src="/js/banner.js"></script>
 </head>
